# OpenTau

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  OPENTAU_TRAIN_EXECUTION_FLOW.md  README.md  RETRY_RANDOM_ON_FAILURE_EXPLANATION.md  REWARD_FUNCTION_EXPLANATION.md  RL_TRAINING_EXECUTION_GUIDE.md  SCRIPTS_DOCUMENTATION.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/scripts/: add_license_header.py  check_accumulate_grad_sync.py  check_loss_drop.py  check_nonzero_grad_norm.py  check_state_keys.py  utils.py
.github/workflows/: build-docker-images.yml  check-pr-checklist.yml  cpu_test.yml  gpu_test.yml  pre-commit.yml  regression_test.yml
configs/dev/: ci_config.json  dev_config.json
configs/examples/: accelerate_deepspeed_config.yaml  pi05_inference_config.json  pi05_libero_eval_config.json  pi05_training_config.json  pi_config.json  ros2lerobot.json  value_config.json
configs/examples/RECAP_examples_franka/: a.bash  accelerate_ddp_config.yaml  accelerate_deepspeed_config.yaml  advantage_config.json  convert_h5_to_lerobot.py  pi0_train_config.json  value_config.json  value_config_droid.json
configs/libero/: reproduce_pi05_libero.json  reproduce_pi05_libero_accelerate_config.yaml
docs/: Makefile  README.md
docs/source/: RL.rst  api.rst  concepts.rst  conf.py  contributing.rst  getting_started.rst  index.rst  installation.rst  model.rst  overview.rst  tutorials.rst
docs/source/tutorials/: RECAP.rst  datasets.rst  deployment.rst  evaluation.rst  human_demo.rst  inference.rst  ros_conversion.rst  training.rst  visualization.rst
notebooks/: pi05_evaluation_only.ipynb  pi05_training.ipynb
src/opentau/: __init__.py  __version__.py  constants.py
src/opentau/configs/: __init__.py  default.py  deployment.py  libero.py  parser.py  policies.py  reward.py  ros2lerobot.py  train.py  types.py
src/opentau/datasets/: __init__.py  backward_compatibility.py  card_template.md  compute_stats.py  dataset_mixture.py  factory.py  image_writer.py  lerobot_dataset.py  online_buffer.py  sampler.py  standard_data_format_mapping.py  transforms.py  utils.py  video_utils.py
src/opentau/datasets/grounding/: __init__.py  base.py  clevr.py  cocoqa.py  dummy.py  pixmo.py  vsr.py
src/opentau/datasets/push_dataset_to_hub/: utils.py
src/opentau/datasets/v2/: batch_convert_dataset_v1_to_v2.py  convert_dataset_v1_to_v2.py
src/opentau/datasets/v21/: _remove_language_instruction.py  batch_convert_dataset_v20_to_v21.py  convert_dataset_v20_to_v21.py  convert_stats.py
src/opentau/datasets/vqa/: __init__.py  base.py  clevr.py  cocoqa.py  dummy.py  pixmo.py  vsr.py
src/opentau/envs/: __init__.py  configs.py  factory.py  libero.py  utils.py
src/opentau/optim/: __init__.py  factory.py  optimizers.py  schedulers.py
src/opentau/planner/: __init__.py  high_level_planner.py  prompts.yaml
src/opentau/planner/utils/: memory.py  utils.py
src/opentau/policies/: __init__.py  factory.py  normalize.py  pretrained.py  utils.py
src/opentau/policies/pi0/: __init__.py  configuration_pi0.py  modeling_pi0.py  paligemma_with_expert.py
src/opentau/policies/pi05/: __init__.py  configuration_pi05.py  modeling_pi05.py  paligemma_with_expert.py
src/opentau/scripts/: actions_mse_loss.py  bin_to_safetensors.py  compute_max_token_length.py  convert_checkpoint.sh  convert_ros_to_lerobot.py  display_sys_info.py  download_libero_benchmarks.py  eval.py  export_to_onnx.py  fake_tensor_training.py  get_advantage_and_percentiles.py  high_level_planner_inference.py  human_video_to_lerobot.py  inference.py  launch.py  launch_train.py  libero_simulation_parallel.py  libero_simulation_sequential.py  nav_high_level_planner_inference.py  onnx_inference.py  recordhuman_to_lerobot.py  tensorrt_inference.py  train.py  visualize_dataset.py  visualize_dataset_html.py
src/opentau/utils/: __init__.py  accelerate_utils.py  benchmark.py  fake_tensor.py  hub.py  import_utils.py  io_utils.py  libero.py  libero_dataset_recorder.py  logging_utils.py  monkey_patch.py  random_utils.py  ros2lerobot.py  train_utils.py  transformers_patch.py  utils.py
tests/: __init__.py  conftest.py  test_available.py  utils.py
tests/artifacts/configs/: train_config.json
tests/artifacts/datasets/: save_dataset_to_safetensors.py
tests/artifacts/image_transforms/: save_image_transforms_to_safetensors.py
tests/artifacts/policies/: save_policy_to_safetensors.py
tests/configs/: test_default.py  test_parser.py  test_train.py  test_utils_policies.py
tests/datasets/: test_compute_stats.py  test_dataset_mixture.py  test_datasets.py  test_delta_timestamps.py  test_image_transforms.py  test_image_writer.py  test_online_buffer.py  test_sampler.py  test_utils.py  test_visualize_dataset.py
tests/envs/: __init__.py  test_configs.py  test_factory.py  test_utils.py
tests/fixtures/: config_factory.py  configs.py  constants.py  dataset_factories.py  files.py  hub.py  optimizers.py  planner.py  policies.py  utils.py
tests/optim/: test_optimizers.py  test_schedulers.py
tests/planner/: test_memory.py
tests/policies/: test_pi0.py  test_pi05.py  test_policies.py  test_value.py
tests/utils/: test_hub.py  test_import_utils.py  test_io_utils.py  test_libero_utils.py  test_logging_utils.py  test_random_utils.py  test_train_utils.py  test_utils_benchmark.py  test_utils_utils.py
(+16 files in other folders)
