# Copyright 2024 The HuggingFace Inc. team. All rights reserved.
# Copyright 2026 Tensor Auto Inc. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project.urls]
homepage = "https://github.com/TensorAuto/OpenTau"
issues = "https://github.com/TensorAuto/OpenTau/issues"
huggingface = "https://huggingface.co/TensorAuto"

[project]
name = "opentau"
version = "0.1.0"
description = "OpenTau: Tensor's VLA Training Infrastructure for Real-World Robotics in Pytorch"
authors = [
    { name = "Shuheng Liu", email = "wish1104@icloud.com" },
    { name = "William Yue", email = "williamyue37@gmail.com" },
    { name = "Akshay Shah", email = "akshayhitendrashah@gmail.com" },
    { name = "Xingrui Gu", email = "xingrui_gu@berkeley.edu" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = "==3.10.*"
keywords = ["robotics", "deep learning", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "cmake>=3.29.0.1",
    "datasets>=2.19.0",
    "deepdiff>=7.0.1",
    "diffusers>=0.27.2",
    "draccus>=0.10.0",
    "einops>=0.8.0",
    "flask>=3.0.3",
    "gdown>=5.1.0",
    "h5py>=3.10.0",
    "huggingface-hub[hf-transfer,cli]>=0.27.1 ; python_version < '4.0'",
    "imageio[ffmpeg]>=2.34.0",
    "jsonlines>=4.0.0",
    "numba>=0.62.0",
    "omegaconf>=2.3.0",
    "opencv-python-headless>=4.9.0",
    "packaging>=24.2",
    "av>=12.0.5",
    "pymunk>=6.6.0",
    "pynput>=1.7.7",
    "pyzmq>=26.2.1",
    "rerun-sdk>=0.21.0",
    "termcolor>=2.4.0",
    "torch>=2.7.1,<2.8.0",
    "torchcodec>=0.4.0, <0.5.0; sys_platform != 'win32' and (sys_platform != 'linux' or (platform_machine != 'aarch64' and platform_machine != 'arm64' and platform_machine != 'armv7l')) and (sys_platform != 'darwin' or platform_machine != 'x86_64')",
    "torchvision>=0.22.1,<0.23.0",
    "wandb>=0.16.3",
    "zarr>=2.17.0",
    "scikit-learn>=1.7.1",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.1 ; sys_platform == 'darwin' or platform_machine == 'arm64' or platform_machine == 'aarch64'",
    "onnxruntime-gpu>=1.22.0 ; ((sys_platform == 'linux' and platform_machine == 'x86_64') or (sys_platform == 'win32' and (platform_machine == 'AMD64' or platform_machine == 'x86_64'))) ",
    "onnxscript>=0.3.1",
    "onnx-ir>=0.1.4",
    "opentau-transformers==4.53.3",
    "scipy>=1.15.2",
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "pyserial>=3.5",
    "pytest-xdist>=3.8.0",
    "scikit-image>=0.23.2",
    "pandas>=2.2.2",
    "accelerate>=1.4.0",
    "deepspeed>=0.17.1"
]

[project.scripts]
opentau-train = "opentau.scripts.launch_train:main"

[project.optional-dependencies]
dev = ["pre-commit>=3.7.0",
    "debugpy>=1.8.1",
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "pyserial>=3.5",
    "pytest-xdist>=3.8.0",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "myst-parser>=4.0.0",
]
openai = ["openai>=1.0.0", "python-dotenv>=1.0.0"]
libero = [
    "cmake<4",
    "ninja",
    "bddl==1.0.1",
    "easydict==1.9",
    "future==0.18.2",
    "matplotlib>=3.5.3",
    "robomimic==0.2.0",
    "robosuite==1.4.0",
    "thop==0.1.1.post2209072238",
    "mujoco>=3.3.5",
    "PyOpenGL==3.1.7",
    "libero",
    "numpy<2",
    "gym>=0.25,<0.27",
    "pyopengl-accelerate==3.1.7 ; sys_platform == 'linux'",
    "gymnasium[other]>=0.29",
]

[tool.uv.sources]
libero = { git = "https://github.com/shuheng-liu/LIBERO" , branch = "master" }  # the official libero repo is misconfigured for pip install with git

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "B", "C4", "SIM"]

[tool.bandit]
exclude_dirs = [
    "tests",
    "src/opentau/datasets/push_dataset_to_hub",
    "src/opentau/datasets/v2/convert_dataset_v1_to_v2"
]
skips = ["B101", "B311", "B404", "B603"]

[tool.typos]
default.extend-ignore-re = [
    "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$", # spellchecker:disable-line
    "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on", # spellchecker:<on|off>
]
default.extend-ignore-identifiers-re = [
    # Add individual words here to ignore them
    "2nd",
    "pn",
    "ser",
    "ein",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (runtime > 1s).",
    "gpu: marks tests as gpu (uses gpu)."
]
